# MyFtpClient

./: CMakeLists.txt  README.md
include/: NetSocket.h  ftp_client.h  getch.h  tools.h
lib/: libNetSocket
src/: NetSocket.c  ftp_client.c  main.c  tools.c
